--- a/minio-deployment.yaml
+++ b/minio-deployment.yaml
@@ -27,8 +27,8 @@ spec:
             - name: MINIO_ROOT_PASSWORD
               value: minio123
           ports:
-            - containerPort: 9000   # S3 API
-            - containerPort: 9001   # Web UI
+            - containerPort: 9000   
+            - containerPort: 9001   
           volumeMounts:
             - name: minio-data
               mountPath: /data
