--- a/secret.yaml
+++ b/secret.yaml
@@ -7,3 +7,4 @@ type: Opaque
 stringData:
   AWS_ACCESS_KEY_ID: "minio"
   AWS_SECRET_ACCESS_KEY: "minio123"
+  AWS_ENDPOINT_URL_S3: "http://minio.minio.svc.cluster.local:9000"
